--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,9 @@
 upstream react {
-    server livestyle-client:3000;
+    server client:3000;
 }
 
 upstream api {
-    server livestyle-server:80;
+    server server:80;
 }
 
 server {
